crates/cockpitctl-feature-grid/tests/snapshots/feature_grid_snapshots__snapshot_grid_all_disabled@features_off.snap
---
source: crates/cockpitctl-feature-grid/tests/feature_grid_snapshots.rs
expression: "render_grid(&[\"--disable-hooks\", \"--disable-buildfix\",\n\"--disable-policy-signing\",])"
---
cli_args: ["--disable-hooks", "--disable-buildfix", "--disable-policy-signing"]

feature              compiled     runtime      grid_match
--------------------------------------------------------
hooks                false        false        true      
buildfix             false        false        true      
policy-signing       false        false        true      

RuntimeFeatureState: hooks=false, buildfix=false, policy_signing=false
