crates/cockpitctl-feature-grid/tests/snapshots/feature_grid_snapshots__snapshot_grid_disable_buildfix_only@features_off.snap
---
source: crates/cockpitctl-feature-grid/tests/feature_grid_snapshots.rs
expression: "render_grid(&[\"--disable-buildfix\"])"
---
cli_args: ["--disable-buildfix"]

feature              compiled     runtime      grid_match
--------------------------------------------------------
hooks                false        false        true      
buildfix             false        false        true      
policy-signing       false        false        true      

RuntimeFeatureState: hooks=false, buildfix=false, policy_signing=false
