crates/cockpitctl-feature-grid/tests/snapshots/feature_grid_snapshots__snapshot_grid_disable_buildfix_only@features_on.snap
---
source: crates/cockpitctl-feature-grid/tests/feature_grid_snapshots.rs
expression: "render_grid(&[\"--disable-buildfix\"])"
---
cli_args: ["--disable-buildfix"]

feature              compiled     runtime      grid_match
--------------------------------------------------------
hooks                true         true         true      
buildfix             true         false        true      
policy-signing       true         true         true      

RuntimeFeatureState: hooks=true, buildfix=false, policy_signing=true
