crates/cockpitctl-feature-grid/tests/snapshots/feature_grid_snapshots__snapshot_grid_disable_hooks_only@features_on.snap
---
source: crates/cockpitctl-feature-grid/tests/feature_grid_snapshots.rs
expression: "render_grid(&[\"--disable-hooks\"])"
---
cli_args: ["--disable-hooks"]

feature              compiled     runtime      grid_match
--------------------------------------------------------
hooks                true         false        true      
buildfix             true         true         true      
policy-signing       true         true         true      

RuntimeFeatureState: hooks=false, buildfix=true, policy_signing=true
