crates/cockpitctl-feature-grid/tests/snapshots/feature_grid_snapshots__snapshot_grid_disable_policy_signing_only@features_on.snap
---
source: crates/cockpitctl-feature-grid/tests/feature_grid_snapshots.rs
expression: "render_grid(&[\"--disable-policy-signing\"])"
---
cli_args: ["--disable-policy-signing"]

feature              compiled     runtime      grid_match
--------------------------------------------------------
hooks                true         true         true      
buildfix             true         true         true      
policy-signing       true         false        true      

RuntimeFeatureState: hooks=true, buildfix=true, policy_signing=false
